--- a/application.yml
+++ b/application.yml
@@ -8,6 +8,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://172.31.22.137:8010/eureka
+  instance:
+    preferIpAddress: true
 
 token:
   expiration_time: 86400000 # 1 days
