--- a/application.yml
+++ b/application.yml
@@ -40,12 +40,13 @@ albums:
   exceptions:
     albums-not-found: User albums not found!!!
 
-# spring:
-#   cloud:
-#     inetutils:
-#       ignored-interfaces:
-#         - eth0
+spring:
+  cloud:
+    inetutils:
+      ignored-interfaces:
+        - docker
+        - eth.*
+        - lo
 #         - eth1
 #         - eth2
 #         - eth3
-#         - lo
