--- a/users-ws.yml
+++ b/users-ws.yml
@@ -2,8 +2,9 @@ server:
   port: ${PORT:8181}
 
 eureka:
-  instance:
-    hostname: users-ws
+  client:
+    instance:
+      hostname: users-ws
 
 login:
   url:
